argocd-authentication-access-secure-mgmt/secure-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-app-demo
  labels:
    environment: secure
    app: secure-app
